✨ chore: Add favicon and responsive design to index.html`
Added a new SVG favicon to the project and updated index.html to include it. Also, introduced media queries for responsive design adjustments on smaller screens.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>语境搭载滚动断裂滑行装置入口</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <script type="module" src="./main.js" defer></script>
   <style>
     body {
@@ -68,6 +70,26 @@
     a {
       color: #4f46e5;
       text-decoration: none;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 24px; /* Reduce font size for smaller screens */
+      }
+
+      .card {
+        padding: 16px 20px; /* Adjust padding for smaller screens */
+        font-size: 18px; /* Slightly reduce font size */
+      }
+
+      .btns {
+        flex-direction: column; /* Stack buttons vertically */
+        gap: 10px; /* Adjust gap */
+      }
+
+      button {
+        width: 100%; /* Make buttons full width */
+      }
     }
   </style>
 </head>
